@@ -4,6 +4,8 @@
 =======================================================
 
 
+25 Jun 2012     memusage report moved after workspace allocation in transport. (AF)
+
 21 Jun 2012     write_ham.f90 (written by MBN) inlcuded in the main distribution. (AF)
 
 08 Jun 2012     implementation of the atmproj basis done (minimal working case). (AF)
